--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     body{
-        background-image: url("/image.png.jpg");
+        background-image: url("./image.png.jpg");
         background-size: cover;
         background-position: center;
     }
